--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.2.1",
+    "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
     "core-js": "^2.6.5",
     "immer": "^3.1.3",
